[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ project_description }}"
authors = ["{{ author }}"]
{% if project_license %}license = "{{ project_license }}"{% endif -%}
readme = "README.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^{{ python_version }}"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
pre-commit-hooks = "^4.6.0"
pre-commit = "^3.7.1"
commitizen = "^3.27.0"
{% if need_tests == "y" %}pytest = "^8.2.1"{% endif -%}

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["pyproject_creator", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "E",  # pycodestyle errors
    "UP",  # pyupgrade
    "ASYNC",  # flake8-async
    "C4",  # flake8-comprehensions
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RUF"  # Ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "T201"  # print found
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
